[package]
name = "gns"
version = "0.1.0"
edition = "2021"
description = "Graph Name System — decentralized name resolution over the Nostr social graph"
license = "MIT"
repository = "https://github.com/asherp/gns"

[[bin]]
name = "gns"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
bech32 = "0.11"
secp256k1 = "0.30"
sha2 = "0.10"
hex = "0.4"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
moka = { version = "0.12", features = ["future"] }
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[profile.release]
opt-level = 3
lto = "thin"
